# CLabsNSU

./: README.md
3d-lab/: CMakeLists.txt  README.md
WAVE_LAB/: CMakeLists.txt  README.md
WAVE_LAB/src/: main.c  maze.h  maze_gen.c
html-lab/: CMakeLists.txt  README.md
html-lab/src/: main.c
lab-begin/src/: main.c
lab0/: end.txt
lab0/src/: main.c
lab1-1/src/: main.c
lab2/src/: main.c
lab3-0/src/: main.c
lab3-1/src/: main.c
lab4/: CMakeLists.txt
lab4/src/: Calc.h  calculate_int.c  main.c  сalculate_float.c
lab5/src/: Bits.c  Bits.h  huffman.c  huffman.h  main.c
lab6-0/src/: main.c
lab6-2/src/: main.c
lab7/src/: main.c
lab8-0/: CMakeLists.txt
lab8-0/src/: main.c  svg.c  svg.h
lab8-1/src/: main.c
lab9/: CMakeLists.txt
lab9/src/: main.c  maze_gen.c
svg-lab/: CMakeLists.txt  README.md
svg-lab/src/: main.c  svg.c  svg.h
